# dise

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: run_benchmark.py
dise/: __init__.py  detectors.py  distances.py  explainer.py  perturbation.py
dise/plotting/: __init__.py  plotter.py
examples/: quickstart.py
tests/: test_detectors.py  test_distances.py  test_explainer.py  test_perturbation.py
