[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dise"
version = "0.1.0"
description = "Directional Sensitivity Explainer — model-agnostic perturbation-based interpretability"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = [
    "explainability", "interpretability", "xai",
    "machine learning", "sensitivity analysis", "perturbation",
]
authors = [
    { name = "DISE Authors", email = "dise@example.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
]

[project.optional-dependencies]
xgboost = ["xgboost>=2.0"]
plotting = ["matplotlib>=3.7"]
dev = [
    "pytest>=7.4",
    "pytest-cov",
    "ruff",
    "mypy",
    "build",
    "twine",
]
all = ["dise[xgboost,plotting,dev]"]

[project.urls]
Repository = "https://github.com/medu-colorado/dise"
Documentation = "https://github.com/medu-colorado/dise#readme"
"Bug Tracker" = "https://github.com/medu-colorado/dise/issues"
Changelog = "https://github.com/medu-colorado/dise/blob/main/CHANGELOG.md"

# ── Package discovery ─────────────────────────────────────────────────────────
# Only include the `dise` package — tests, benchmarks, and examples
# are excluded from the wheel and sdist.
[tool.setuptools.packages.find]
where = ["."]
include = ["dise*"]
exclude = ["tests*", "benchmarks*", "examples*"]

[tool.setuptools.package-data]
dise = ["py.typed"]

# ── Tool config ───────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.ruff]
line-length    = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version      = "3.9"
ignore_missing_imports = true
files               = ["dise"]
